# Hastings

./: .env  .gitignore  .travis.yml  ChineseCheckers.hs  ChineseGraphics.hs  Hastings.cabal  Lobby.hs  Main.hs  Makefile  README.md  Table.hs  Tests.hs  chineseCheckers.hs  config.conf  stack.yaml  tests.hs
app/: Main.hs  ServerProduction.hs  StandaloneApp.hs
src/: Chat.hs  ChineseBitmaps.hs  ChineseCheckers.hs  ChineseGame.hs  ChineseGraphics.hs  GameAPI.hs  Lobby.hs  LobbyAPI.hs  LobbyClient.hs  LobbyServer.hs  LobbyTypes.hs  Server.hs  Table.hs
src/ChineseCheckers/: ChineseBitmaps.hs  ChineseCheckers.hs  ChineseGame.hs  ChineseGraphics.hs  Table.hs
src/Hastings/: Config.hs  ServerUtils.hs  ServerUtilsTests.hs  Utils.hs
src/Hastings/Database/: Common.hs  Fields.hs  Game.hs  Player.hs
src/Server/: Chat.hs  Game.hs  Lobby.hs
src/Views/: Chat.hs  Common.hs  Game.hs  Lobby.hs
test/: ArbitraryGameTypes.hs  ArbitraryLobbyTypes.hs  Spec.hs  Tests.hs  Utils.hs
test/Hastings/: ServerUtilsTests.hs
test/Server/: ChatTest.hs  GameTest.hs  LobbyTest.hs
