name:                Hastings
version:             0.1.0.0
synopsis:            A game lobbby and simple chinese checkers game
description:         Please see README.md
homepage:            http://github.com/githubuser/Hastings#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Gustafsson, Mattias Nilsen, André Samuelsson, Benjamin Block, Mikael Milakovic
maintainer:          mattias.m.nilsen@gmail.com
copyright:           2016 Joel Gustafsson, Mattias Nilsen, André Samuelsson, Benjamin Block, Mikael Milakovic
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:
    base >= 4.7 && < 5
  if impl(haste)
    exposed-modules:     Lib, Lobby, LobbyTypes, Hastings.Utils, LobbyClient, LobbyAPI
    build-depends: haste-lib >= 0.5 && < 0.6
  else
    exposed-modules:     Lib, Lobby, LobbyServer, LobbyTypes, Hastings.Utils, LobbyClient, LobbyAPI
    build-depends:
      haste-compiler >= 0.5 && < 0.6,
      uuid,
      random
  --  build-depends: containers
  default-language:    Haskell2010

executable Hastings-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
   base      >= 4.8 && < 4.9,
   Hastings,
   haste-standalone
 if impl(haste)
   build-depends: haste-lib >= 0.5 && < 0.6
 else
   build-depends:
    haste-compiler >= 0.5 && < 0.6,
    uuid,
    random
  default-language:    Haskell2010

test-suite Hastings-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Hastings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Hastings
