name:                Hastings
version:             0.1.0.0
synopsis:            A game lobbby and simple chinese checkers game
description:         Please see README.md
homepage:            http://github.com/githubuser/Hastings#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Gustafsson, Mattias Nilsen, André Samuelsson, Benjamin Block, Mikael Milakovic
maintainer:          mattias.m.nilsen@gmail.com
copyright:           2016 Joel Gustafsson, Mattias Nilsen, André Samuelsson, Benjamin Block, Mikael Milakovic
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag HasteStandalone
  Description: If the HasteStandalone package is available.
  Default: False
  -- Cabal checks if the configuration is possible, first
  -- with this flag set to True and if not it tries with False

library
  hs-source-dirs:      src
  build-depends:
    base >= 4.7 && < 5,
    bytestring
  exposed-modules:
      Hastings.Config
    , Views.Chat
    , Views.Lobby
    , Views.Common
    , Views.Game
    , LobbyTypes
    , Hastings.Utils
    , LobbyClient
    , LobbyAPI
    , ChineseCheckers.Table
    , ChineseCheckers.ChineseGraphics
    , ChineseCheckers.ChineseCheckers
    , ChineseCheckers.ChineseGame
    , ChineseCheckers.ChineseBitmaps
  if impl(haste)
    build-depends:
      haste-lib >= 0.5 && < 0.6,
      haste-prim

  else
    exposed-modules:
        Server
      , Hastings.ServerUtils
      , Server.Game
      , Server.Chat
      , Server.Lobby
      , Hastings.Database.Common
      , Hastings.Database.Fields
      , Hastings.Database.Player
      , Hastings.Database.Game
    build-depends:
      haste-compiler >= 0.5 && < 0.6,
      uuid,
      random,
      persistent,
      persistent-mysql,
      persistent-template,
      esqueleto,
      monad-logger,
      pwstore-fast
  --  build-depends: containers
  default-language:    Haskell2010

executable Hastings-exe
  hs-source-dirs:      app

  if flag(HasteStandalone)
    main-is:             StandaloneApp.hs
  else
    main-is:             Main.hs

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
   base      >= 4.8 && < 4.9,
   Hastings,
   bytestring

  if flag(HasteStandalone)
    build-depends: haste-standalone
  else
    if impl(haste)
      ghc-options: --output-html

 if impl(haste)
   build-depends: haste-lib >= 0.5 && < 0.6

 else
   build-depends:
    haste-compiler >= 0.5 && < 0.6,
    uuid,
    random,
    pwstore-fast
  default-language:    Haskell2010

test-suite Hastings-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    base,
    Hastings,
    haste-compiler,
    test-framework,
    test-framework-quickcheck2,
    QuickCheck,
    bytestring
  other-modules:       Utils, Server.LobbyTest, ArbitraryLobbyTypes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Hastings
